fixed mangapage bug

--- a/src/app/modules/home/components/manga-page/manga-page.component.css
+++ b/src/app/modules/home/components/manga-page/manga-page.component.css
@@ -249,18 +249,20 @@
 
 .thumb-wrap-mob{
   width: 100%;
-  height: 40%;
-  /* border-top-left-radius: 20px;
-  border-top-right-radius: 20px; */
+  height: 33vh;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   background-size: cover;
   background-position: center;
+  /* padding: 20px 0; */
 }
 
 .thumb-wrap-mob>div{
   width: 100%;
   height: 100%;
-  /* border-top-left-radius: 20px;
-  border-top-right-radius: 20px; */
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  /* padding: 20px 0; */
   background: linear-gradient( 0deg, rgb(0 0 0 / 73%) 0%, #000000c9 100%, rgb(56 56 162) 100%, rgb(12 12 12 / 0%) 100% );
 }
 
@@ -319,14 +321,24 @@
 
 .desc-mob-wrap{
   width: 100%;
-  min-height: 20%;
   color:#b5a2a2;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin-top: 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background: #232323;
+  display: flex;
+  justify-content: center
+}
+
+.desc-mob-wrap>div{
+  width: 90%;
+  height: 98%;
+  padding-top: 5px;
+  padding-bottom: 20px;
 }
 
 .manga-data{
   width: 100%;
+  margin-top: 20px;
   display: block;
 }
 
@@ -345,6 +357,10 @@
 }
 .mobile-chap-wrap{
   width: 99% !important;
+}
+
+.mobile-chap-wrap>div{
+  padding-bottom: 20%;
 }
 
 @media screen and (max-width: 1028px) {
